--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -6,7 +6,7 @@ sites:
   - name: alex-rock.tech
     url: https://alex-rock.tech/en/
   - name: www.orbitale.io
-    url: https://www.orbitale.io/
+    url: https://www.orbitale.tech/
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
