--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,10 +3,18 @@ owner: Pierstoval # Your GitHub organization or username, where this repository 
 repo: my_upptime # The name of this repository
 
 sites:
-  - name: alex-rock.tech
-    url: https://alex-rock.tech/en/
-  - name: www.orbitale.tech
-    url: https://www.orbitale.tech/
+  - { name: alex-rock.tech , url: https://alex-rock.tech/en/ }
+  - { name: www.orbitale.tech , url: https://www.orbitale.tech/ }
+  - { name: stars.pierstoval.com , url: https://stars.pierstoval.com/ }
+
+  - { name: wiki dragons , url: https://dragons.pierstoval.com/ }
+  - { name: wiki esteren , url: https://esteren.pierstoval.com/ }
+
+  - { name: esterenmaps , url: https://esterenmaps.pierstoval.com/ }
+  - { name: corahnrinv1 , url: https://jdr.pierstoval.com/esteren/ }
+  - { name: corahnrinv2 , url: https://corahnrin.pierstoval.com/ }
+  
+  - { name: corahnrinv2 , url: https://corahnrin.pierstoval.com/ }
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
